--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.3
 django-allauth==0.39.1
+django-cors-headers==3.0.2
 django-filter==2.2.0
 django-rest-auth==0.9.5
 djangorestframework==3.10.1
