--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-filter==2.2.0
 django-rest-auth==0.9.5
 djangorestframework==3.10.1
 djangorestframework-jwt==1.11.0
+gunicorn==19.9.0
 idna==2.8
 Markdown==3.1.1
 oauthlib==3.0.2
