--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -12,16 +12,17 @@ services:
     ports:
       - ${DB_PORT}:5432
       
-  backend:
+  mine_backend:
     build: .
-    image: backend
+    image: mine_backend
+    container_name: mine_backend
     command: bash -c "sleep 5 && sh ./entrypoint-prod.sh"
     env_file: 
       - .env
     volumes:
       - .:/app
-    ports:
-      - 8000:80
+    expose:
+      - "8000"
     links:
       - db
   
@@ -37,7 +38,7 @@ services:
     ports:
       - "80:80"
     links:
-      - backend
+      - mine_backend
     deploy:
       replicas: 1
       restart_policy:
@@ -46,11 +47,11 @@ services:
     volumes:
       - ./logs/nginx:/tmp/logs
       - ./nginx:/etc/nginx/conf.d/default.conf
-      - ./static:/opt/app/static
+      - ./django-static:/opt/app/django-static
       - ./media:/opt/app/media
       - ./frontend/build:/var/www/frontend # maps frontend build inside nginx
     depends_on:
-      - backend
+      - mine_backend
 
 volumes:
   web-db:
