--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,13 +25,13 @@ services:
     links:
       - db
   
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    command: bash -c "npm run --prefix ./frontend start"
-    volumes:
-      - .:/app
-    ports:
-      - "3000:3000"
-    stdin_open: true
-    tty: true
+#  frontend:
+#    build: ./frontend
+#    container_name: frontend
+#    command: bash -c "npm run --prefix ./frontend start"
+#    volumes:
+#      - .:/app
+#    ports:
+#      - "3000:3000"
+#    stdin_open: true
+#    tty: true
