--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,11 @@ markdown = "^3.2.2"
 django-filter = "^2.3.0"
 django-rest-auth = "^0.9.5"
 Faker = "^4.1.2"
+coreapi = "^2.3.3"
+django-allauth = "^0.42.0"
 
 [tool.poetry.dev-dependencies]
+django-debug-toolbar = "^2.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
