--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-rest-auth = "^0.9.5"
 Faker = "^4.1.2"
 coreapi = "^2.3.3"
 django-allauth = "^0.42.0"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^2.2"
