--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -23,7 +23,8 @@ services:
   
   nginx:
     image: nginx:latest
-#    env_file: .env
+    container_name: nginx
+    #    env_file: .env
     env_file:
       - ./docker/.env
     ports:
@@ -38,7 +39,7 @@ services:
     volumes:
       - ./logs/nginx:/tmp/logs
       - ./nginx:/etc/nginx/conf.d/default.conf
-      - ./django-static:/opt/app/django-static
+      - ./web/django-static:/opt/app/django-static
       - ./media:/opt/app/media
       - ./frontend/build:/var/www/frontend # maps frontend build inside nginx
     depends_on:
