--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ Faker = "^4.1.2"
 coreapi = "^2.3.3"
 django-allauth = "^0.42.0"
 gunicorn = "^20.0.4"
+requests = "^2.24.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^2.2"
