--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
     image: backend
     container_name: backend
     command: bash -c "sleep 4 && sh ./docker/entrypoint.sh"
-    env_file:
-      - ./docker/.env
+    env_file: ./docker/.env
     volumes:
       - .:/code
     ports:
@@ -25,13 +24,14 @@ services:
     links:
       - db
   
-#  frontend:
-#    build: ./frontend
-#    container_name: frontend
-#    command: bash -c "npm run --prefix ./frontend start"
-#    volumes:
-#      - .:/app
-#    ports:
-#      - "3000:3000"
-#    stdin_open: true
-#    tty: true
+  frontend:
+   build: ./frontend
+   container_name: frontend
+   env_file: ./docker/.env
+   command: bash -c "cd ./frontend && npm run start"
+   volumes:
+     - .:/app
+   ports:
+     - "3000:3000"
+   stdin_open: true
+   tty: true
