--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -34,7 +34,7 @@ services:
     deploy:
       replicas: 1
       restart_policy:
-        condition: unless-stopped
+        condition: none
     command: /bin/bash -c "sleep 5 && nginx -g 'daemon off;'"
     volumes:
       - ./logs/nginx:/tmp/logs
