--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,7 +5,7 @@ ENV PYTHONUNBUFFERED 1
 COPY . /code
 WORKDIR /code
 
-# ENV PYTHONPATH=${PYTHONPATH}:${PWD}
 RUN pip3 install poetry
 RUN poetry config virtualenvs.create false
-RUN poetry install --no-dev
+RUN poetry config installer.parallel false
+RUN poetry install --without dev
